assets/css/public/public.css
/* ... */
#arwai-close-single-annotation.arwai-btn {
    float: right;
}
#arwai-close-single-annotation.arwai-btn:hover {
    transform: var(--arwai-tag-transition-child-scale-small);
    background-color: #00a4cb;
}

/* ==========================================================================
   7. OpenSeadragon & Annotorious Overrides
   ========================================================================== */
#arwai-osd-modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100dvh;
    background-color: rgba(0, 0, 0, 0.9);
    z-index: 9999;
    margin: 0;
}

#arwai-osd-viewer { 
    width: 100%; 
    height: 100%; 
}

.arwai-osd-toolbar-container {
    position: absolute;
    top: 50px;
    left: 50%;
    transform: translateX(-50%);
    padding: 0.4rem 1.5rem;
    backdrop-filter: blur(5px);
    background: rgba(0, 0, 0, 0.5);
    border-radius: 50px;
    z-index: 10000;
    display:flex;
    align-items: center;
    justify-content: space-between;
    gap:1.4rem;
}

#arwai-openseadragon-toolbar button,
#arwai-openseadragon-toolbar-other button {
    background: transparent;
    padding: 0 ;
    border: none;
    color: white;
    cursor: pointer;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: flex!important;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

#arwai-openseadragon-toolbar button:hover,
#arwai-openseadragon-toolbar-other button:hover {
    background-color: rgba(255, 255, 255, 0.2);
    transform: var(--arwai-tag-transition-child-scale-large);

    
}
/* New rule to change the span's text color when the button is hovered */
#arwai-openseadragon-toolbar button:hover .arwai-osd-toolbar-button-wrapper ,
#arwai-openseadragon-toolbar-other button:hover .arwai-osd-toolbar-button-wrapper {
    color: red;
}

#arwai-openseadragon-toolbar-other {
    position: absolute;
    top: unset;
    top: 50px;
    left: 90%;
    padding: 0.4rem 1rem;
    backdrop-filter: blur(5px);
    background: rgba(0, 0, 0, 0.5);
    border-radius: 50px;
    z-index: 10000;
    display:flex;
    align-items: center;
    justify-content: space-between;
    gap: 0;
}

.arwai-osd-toolbar-button-wrapper {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 10px;
    color: white;

}
#arwaiHomeWrapper {
    border-left: 1px solid rgba(128, 128, 128, 0.201)!important;
    border-right: 1px solid rgba(128, 128, 128, 0.201)!important;

    padding-left: 1rem;
    padding-right: 1rem;
}
.arwai-zoom-buttons {
    border-right: 1px solid rgba(128, 128, 128, 0.201)!important;
    padding-right: .5rem;
}

.arwai-rotate-buttons {
    padding-left: .5rem;

}



.arwai-zoom-buttons,
.arwai-rotate-buttons {
    display: flex;
    justify-content: space-around;
    gap:.5rem;
}


/* Annotorious label styles */
.a9s-annotation foreignObject {
    overflow: visible;
    width: 1px;
    height: 1px;
}

.a9s-annotation foreignObject label {
    display: flex;
    justify-content: center;
    align-items: center;
    width: .7rem;
    height: .7rem;
    padding: 4px;
    border-radius: 50%;
    transform: translateY(-50%) translateX(-50%);
    font-size: 12px;
    white-space: nowrap;
    background-color: var(--annotation-label-base-background-color);
    color: var(--annotation-label-base-font-color);
    border: 1px solid #333;
}

.a9s-annotation.tagged .a9s-inner { stroke: var(--annotation-label-tagged-background-color); }
.a9s-annotation.important .a9s-inner { stroke: var(--annotation-label-important-background-color); }
.a9s-annotation.selected .a9s-inner { 
    stroke: var(--annotation-label-selected-background-color) !important; 
    box-shadow: var(--wp--preset--shadow--natural);
}

.a9s-annotation.tagged foreignObject label { background: var(--annotation-label-tagged-background-color); color: var(--annotation-label-tagged-font-color); border:none; }
.a9s-annotation.important foreignObject label { background: var(--annotation-label-important-background-color); color: var(--annotation-label-important-font-color); border:none; }
.a9s-annotation.selected foreignObject label { 
    /* background: var(--annotation-label-selected-background-color) !important;  */
    /* color: var(--annotation-label-selected-font-color) !important;  */
    border: 1px solid var(--annotation-label-selected-background-color); 
    box-shadow: var(--wp--preset--shadow--natural);

}



@media (max-width: 767px) {


    .arwai-osd-toolbar-container {
        position: absolute;
        top: unset;
        bottom: 0px;
        left: 50%;
        transform: translateX(-50%);
        padding: 0.25rem 2rem 1rem 2rem;
        width: 100%;
        border-radius: 1.5rem 1.5rem 0 0 ;
        box-sizing: border-box;
        display: flex;
        justify-content: space-between;
        align-items: center;
        color:white;
        font-size: small;
        
    }
    .arwai-osd-toolbar-container button,
    #arwai-openseadragon-toolbar-other button {
        display: flex;
        align-items: center;
        gap: 6px;
        padding: 8px;
        justify-content: center;
        flex-basis: 1;
    }

        #arwai-openseadragon-toolbar-other {
        display: none!important;
    }


    .arwai-osd-toolbar-button-wrapper {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 10px;

    }

    /* #arwaiAnnotationStateOn {
        font-size: x-small;
    } */

/* 
    #arwaiPrevious {
    }

    #arwaiHomeWrapper {
    }

    #arwaiNext {
    }

    #arwai-osd-close {
    } */


}
/* ... */

